--- a/styleCSS/style.css
+++ b/styleCSS/style.css
@@ -18,7 +18,6 @@ html {
 }
 header {
   height: 100vh;
-  width: 100%;
   overflow: hidden;
   position: fixed;
   top: 0;
@@ -28,7 +27,8 @@ header {
 }
 video {
   width: 100%;
-  object-fit: contain; /* الفيديو هيبان كامل بدون قص */
+  height: 100%;
+  object-fit: cover; /* الفيديو هيبان كامل بدون قص */
   background: black; /* هيظهر لون أسود في الجوانب الفاضية */
   z-index: -1;
 }
@@ -68,4 +68,8 @@ video {
 
     background: rgb(18, 145, 145);
 
+}
+
+#inputName{
+  display: none;
 }
